--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
