--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ky": "^1.7.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
