--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
