--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ky": "^1.7.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
