--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "ky": "^1.7.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-cloudinary": "^6.16.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
